kthread example can now generate multiple threads

--- a/04_kthread/Makefile
+++ b/04_kthread/Makefile
@@ -1,4 +1,4 @@
-obj-m += lkm_example.o
+obj-m += kthread.o
 
 all:
 	make -C /lib/modules/$(shell uname -r)/build M=$(PWD) modules
@@ -8,7 +8,7 @@ clean:
 
 test:
 	sudo dmesg -C
-	-sudo insmod lkm_example.ko
+	-sudo insmod kthread.ko
 	sleep 5
-	sudo rmmod lkm_example.ko
+	sudo rmmod kthread.ko
 	dmesg
